# dimes

./: .gitignore  README.md  forge.toml  pyproject.toml
.github/workflows/: build-and-test.yaml  test.yaml
dimes/: __init__.py  common.py  dimensional_plot.py  dimes.py  griddeddata.py  timeseries.py
examples/: hpwh_comparison.py
test/: test_dimes.py  test_griddeddata.py  test_timeseries.py
