[project]
name = "dimes"
version = "0.0.0"
description = "A dimensionally aware scientific plotting package."
authors = [{ name = "Big Ladder Software" }]
requires-python = "~=3.10"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["template"]
dependencies = ["plotly", "koozie>=1.3.0,<2", "kaleido==0.2.1"]

[project.urls]
Repository = "https://github.com/bigladder/dimes"

[dependency-groups]
dev = ["pytest", "ruff", "pre-commit", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "F",    # pyflakes (see https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "PL",   # Pylint (see https://docs.astral.sh/ruff/rules/#pylint-pl)
    "I001", # isort unsorted-imports (see https://docs.astral.sh/ruff/rules/#isort-i)
]
ignore = [
    "F405", # undefined-local-with-import-star-usage
]

[tool.ruff.lint.pylint]
max-args = 6


[tool.mypy]
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "dimes.*"
disable_error_code = ["import"]
